# logging-context

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
logging_context/: __init__.py  logging.py  manager.py
simple_logging_context/: __init__.py
tests/: test_logging_context.py
