[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-logging-context"
description = ""
version = "0.1.1"
authors = [{ name = "Christian Hartung", email = "hartung@live.com" }]
requires-python = ">=3.10"

[tool.hatch.envs.default]
dependencies = ["pytest"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]
