[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simple-logging-context"
authors = [{ name = "Christian Hartung", email = "hartung@live.com" }]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/hartungstenio/simple-logging-context.git"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = ["pytest"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]
